fixed project flex-wrap; added images for projects; removed index comment block

--- a/react-portfolio-website/src/components/outreach/outreach.css
+++ b/react-portfolio-website/src/components/outreach/outreach.css
@@ -9,7 +9,7 @@
 .outreach {
     background: var(--color-bg);
     text-align: center;
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 1.0rem 0.5rem;
     user-select: none;
     text-align: justify;
 }
