--- a/react-portfolio-website/src/components/projects/projects.css
+++ b/react-portfolio-website/src/components/projects/projects.css
@@ -3,8 +3,17 @@
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    justify-content:center;
+    justify-content:flex-start;
+    background: var(--color-bg);
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 1px solid transparent;
 }
+
+.projects__container:hover {
+    border: 1px solid var(--color-primary-variant)
+}
+
 .project__content {
     width: 10rem;
     aspect-ratio: 1/1;
